delfianto.tei-reranker-proxy.444e382a20f64cf9fca6b548f5179eb2a000a997
Running as unit: run-p1781042-i14361150.scope; invocation ID: e45f01bf62144041b5406ea634e12ca6
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.19
   Compiling libc v0.2.175
    Checking cfg-if v1.0.3
    Checking bytes v1.10.1
    Checking smallvec v1.15.1
    Checking itoa v1.0.15
    Checking fnv v1.0.7
    Checking pin-project-lite v0.2.16
   Compiling autocfg v1.5.0
    Checking stable_deref_trait v1.2.0
    Checking futures-core v0.3.31
   Compiling parking_lot_core v0.9.11
    Checking scopeguard v1.2.0
    Checking futures-sink v0.3.31
   Compiling version_check v0.9.5
    Checking log v0.4.28
   Compiling lock_api v0.4.13
    Checking pin-utils v0.1.0
   Compiling httparse v1.10.1
    Checking writeable v0.6.1
   Compiling typenum v1.18.0
    Checking slab v0.4.11
    Checking futures-task v0.3.31
    Checking litemap v0.8.0
   Compiling generic-array v0.14.7
    Checking http v1.3.1
    Checking futures-util v0.3.31
   Compiling serde_core v1.0.221
   Compiling quote v1.0.40
    Checking signal-hook-registry v1.4.6
    Checking socket2 v0.6.0
    Checking mio v1.0.4
    Checking parking_lot v0.12.4
   Compiling syn v2.0.106
    Checking getrandom v0.2.16
   Compiling icu_properties_data v2.0.1
    Checking once_cell v1.21.3
   Compiling shlex v1.3.0
   Compiling icu_normalizer_data v2.0.0
   Compiling find-msvc-tools v0.1.1
   Compiling cc v1.2.37
    Checking memchr v2.7.5
    Checking percent-encoding v2.3.2
   Compiling zerocopy v0.8.27
   Compiling serde v1.0.221
    Checking tracing-core v0.1.34
    Checking http v0.2.12
    Checking zeroize v1.8.1
   Compiling ring v0.17.14
    Checking try-lock v0.2.5
    Checking tower-service v0.3.3
    Checking rustls-pki-types v1.12.0
    Checking want v0.3.1
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking tracing v0.1.41
    Checking form_urlencoded v1.2.2
    Checking http-body v1.0.1
    Checking futures-channel v0.3.31
    Checking utf8_iter v1.0.4
    Checking untrusted v0.9.0
    Checking digest v0.10.7
    Checking rand_core v0.6.4
   Compiling thiserror v1.0.69
    Checking cpufeatures v0.2.17
   Compiling rustls v0.23.31
    Checking sha1 v0.10.6
    Checking aho-corasick v1.1.3
    Checking ryu v1.0.20
    Checking mime v0.3.17
    Checking atomic-waker v1.1.2
    Checking hashbrown v0.15.5
   Compiling unicase v2.8.1
    Checking subtle v2.6.1
   Compiling serde_json v1.0.144
    Checking regex-syntax v0.8.6
    Checking equivalent v1.0.2
   Compiling mime_guess v2.0.5
    Checking indexmap v2.11.1
    Checking ppv-lite86 v0.2.21
    Checking rand_chacha v0.3.1
   Compiling multer v2.1.0
    Checking rand v0.8.5
    Checking sync_wrapper v1.0.2
    Checking regex-automata v0.4.10
    Checking tower-layer v0.3.3
    Checking httpdate v1.0.3
    Checking byteorder v1.5.0
   Compiling synstructure v0.13.2
    Checking ipnet v2.11.0
    Checking data-encoding v2.9.0
    Checking utf8parse v0.2.2
    Checking utf-8 v0.7.6
   Compiling getrandom v0.3.3
    Checking base64 v0.22.1
    Checking anstyle-parse v0.2.7
    Checking webpki-roots v1.0.2
    Checking headers-core v0.2.0
    Checking http-body v0.4.6
    Checking socket2 v0.5.10
    Checking encoding_rs v0.8.35
    Checking anstyle-query v1.1.4
    Checking anstyle v1.0.11
    Checking base64 v0.21.7
    Checking is_terminal_polyfill v1.70.1
    Checking colorchoice v1.0.4
    Checking bitflags v2.9.4
    Checking regex v1.11.2
    Checking iri-string v0.7.8
    Checking spin v0.9.8
    Checking env_filter v0.1.3
    Checking rustls-webpki v0.103.5
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling zerovec-derive v0.11.1
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.5.0
   Compiling serde_derive v1.0.221
    Checking tokio v1.47.1
   Compiling thiserror-impl v1.0.69
   Compiling pin-project-internal v1.1.10
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
    Checking zerovec v0.11.4
    Checking zerotrie v0.2.2
    Checking pin-project v1.1.10
    Checking anstream v0.6.20
    Checking headers v0.3.9
    Checking http-body-util v0.1.3
    Checking jiff v0.2.15
    Checking scoped-tls v1.0.1
    Checking uuid v1.19.0
    Checking tinystr v0.8.1
    Checking potential_utf v0.1.3
    Checking icu_locale_core v2.0.0
    Checking icu_collections v2.0.0
    Checking icu_provider v2.0.0
    Checking icu_normalizer v2.0.0
    Checking icu_properties v2.0.1
    Checking serde_urlencoded v0.7.1
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking url v2.5.7
    Checking tungstenite v0.21.0
    Checking hyper v1.7.0
    Checking tokio-util v0.7.16
    Checking tokio-rustls v0.26.2
    Checking tower v0.5.2
    Checking tokio-tungstenite v0.21.0
    Checking env_logger v0.11.8
    Checking h2 v0.3.27
    Checking tower-http v0.6.6
    Checking hyper-util v0.1.16
    Checking hyper-rustls v0.27.7
    Checking reqwest v0.12.23
    Checking hyper v0.14.32
    Checking warp v0.3.7
    Checking rerank-proxy v0.2.0 (/tmp/nix-shell.uUVugk/delfianto_tei-reranker-proxy_apv12zb6)
error[E0275]: overflow evaluating the requirement `<<log::internal::WithLog<impl (for<'a> Fn(warp::log::Info<'a>)) + Copy, cors::internal::CorsFilter<warp::filter::recover::Recover<..., ...>>> as warp::filter::FilterBase>::Future as futures_core::future::TryFuture>::Ok: Reply`
   --> src/main.rs:124:29
    |
124 |         warp::serve(routes).bind_with_graceful_shutdown(([0, 0, 0, 0], config.port), async {
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)
note: required by a bound in `warp::Server::<F>::bind_with_graceful_shutdown`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/warp-0.3.7/src/server.rs:127:35
    |
127 |     <F::Future as TryFuture>::Ok: Reply,
    |                                   ^^^^^ required by this bound in `Server::<F>::bind_with_graceful_shutdown`
...
286 |     pub fn bind_with_graceful_shutdown(
    |            --------------------------- required by a bound in this associated function

error[E0275]: overflow evaluating the requirement `<<log::internal::WithLog<impl (for<'a> Fn(warp::log::Info<'a>)) + Copy, cors::internal::CorsFilter<warp::filter::recover::Recover<..., ...>>> as warp::filter::FilterBase>::Future as futures_core::future::TryFuture>::Error: reject::sealed::IsReject`
   --> src/main.rs:124:29
    |
124 |         warp::serve(routes).bind_with_graceful_shutdown(([0, 0, 0, 0], config.port), async {
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)
note: required by a bound in `warp::Server::<F>::bind_with_graceful_shutdown`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/warp-0.3.7/src/server.rs:128:38
    |
128 |     <F::Future as TryFuture>::Error: IsReject,
    |                                      ^^^^^^^^ required by this bound in `Server::<F>::bind_with_graceful_shutdown`
...
286 |     pub fn bind_with_graceful_shutdown(
    |            --------------------------- required by a bound in this associated function

error[E0275]: overflow evaluating the requirement `(std::net::SocketAddr, impl warp::Future<Output = ()> + 'static) well-formed`
   --> src/main.rs:124:29
    |
124 |         warp::serve(routes).bind_with_graceful_shutdown(([0, 0, 0, 0], config.port), async {
    |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)

error[E0275]: overflow evaluating the requirement `impl warp::Future<Output = ()> + 'static well-formed`
   --> src/main.rs:128:5
    |
128 |     server.await;
    |     ^^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)

error[E0275]: overflow evaluating the requirement `<impl warp::Future<Output = ()> + 'static as IntoFuture>::IntoFuture well-formed`
   --> src/main.rs:128:12
    |
128 |     server.await;
    |            ^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)

error[E0275]: overflow evaluating the requirement `impl warp::Future<Output = ()> + 'static well-formed`
   --> src/main.rs:128:12
    |
128 |     server.await;
    |            ^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)

error[E0275]: overflow evaluating the requirement `Pin<&mut impl warp::Future<Output = ()> + 'static> well-formed`
   --> src/main.rs:128:12
    |
128 |     server.await;
    |            ^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)

error[E0275]: overflow evaluating the requirement `&mut impl warp::Future<Output = ()> + 'static well-formed`
   --> src/main.rs:128:12
    |
128 |     server.await;
    |            ^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)

error[E0275]: overflow evaluating the requirement `Poll<<impl warp::Future<Output = ()> + 'static as warp::Future>::Output> well-formed`
   --> src/main.rs:128:12
    |
128 |     server.await;
    |            ^^^^^
    |
    = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`rerank_proxy`)

For more information about this error, try `rustc --explain E0275`.
error: could not compile `rerank-proxy` (bin "rerank-proxy") due to 9 previous errors
